# sporc

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  pytest.ini  setup.py
docs/: HANDOFF-subset-scan-fix.md  contributing.md  data-access.md  index.md  installation.md  quickstart.md  tutorials.md
docs/guides/: categories.md  conversation-analysis.md  faq.md  loading.md  phonetics.md  searching.md  sliding-windows.md
docs/reference/: episode.md  index.md  misc.md  phonetics.md  podcast.md  sporcdataset.md  turn.md
docs/wiki/: API-Reference.md  Basic-Usage.md  Categories.md  Contributing.md  Conversation-Analysis.md  Episode.md  FAQ.md  Home.md  Installation.md  Lazy-Loading.md  Podcast.md  SPORCDataset.md  Search-Examples.md  Selective-Loading.md  Sliding-Windows.md  Streaming-Mode.md  Turn.md
examples/: advanced_analysis.py  basic_usage.py  category_examples.py  efficient_lazy_loading_examples.py  lazy_loading_examples.py  selective_loading.py  sliding_window_examples.py  streaming_usage.py  test_subcategory_functionality.py  test_time_range_functionality.py  time_range_examples.py
examples/notebooks/: 01_corpus_cartography.ipynb  02_ner_comention_networks.ipynb  03_host_guest_networks.ipynb  04_repeat_guest_language.ipynb  05_stance_over_time.ipynb  06_topic_modeling_mallet.ipynb  07_sociophonetics_caught_cot.ipynb  08_conversational_dynamics.ipynb  README.md  _build.py  _viz.py
examples/notebooks/src/: nb01_cartography.py  nb02_ner_comention.py  nb03_host_guest.py  nb04_repeat_guests.py  nb05_stance_over_time.py  nb06_topic_modeling.py  nb07_sociophonetics.py  nb08_conversational_dynamics.py
scripts/: audit_api.py  build_indexes.py  build_tutorial_subset.py  convert_to_parquet.py  make_subset.py
scripts/notebooks/: build.py
scripts/notebooks/src/: nb01_cartography.py  nb02_ner_comention.py  nb03_host_guest.py  nb04_repeat_guests.py  nb05_stance_over_time.py  nb06_topic_modeling.py  nb07_sociophonetics.py  nb08_conversational_dynamics.py
sporc/: __init__.py  cli.py  dataset.py  episode.py  exceptions.py  parquet_backend.py  phonetics.py  podcast.py  shard_map.py  source.py  turn.py
tests/: conftest.py  test_build_indexes.py  test_cli.py  test_constants.py  test_dataset_comprehensive.py  test_dataset_edge_cases.py  test_dataset_parquet_mode.py  test_dataset_unit.py  test_episode_comprehensive.py  test_episode_unit.py  test_exceptions.py  test_host_index.py  test_hub_rate_limit.py  test_local_dataset.py  test_logging.py  test_notebook_driven_fixes.py  test_object_ids.py  test_parquet_backend.py  test_parquet_layout_integration.py  test_phonetics_unit.py  test_podcast_unit.py  test_sliding_window.py  test_sporc.py  test_streaming.py  test_streaming_functionality.py  test_turn_unit.py
