[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sporc"
version = "1.1.3"
description = "A Python package for working with the SPORC (Structured Podcast Open Research Corpus) dataset"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "David Jurgens", email = "jurgens@umich.edu" },
]
keywords = ["podcast", "audio", "nlp", "research", "dataset", "huggingface", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    # 1.2 added backoff that honours the Hub's Retry-After on HTTP 429.
    # Older versions surface the rate limit as a hard failure, which is how
    # a large prefetch used to die partway through.
    "huggingface_hub>=1.2.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "requests>=2.25.0",
    "tqdm>=4.62.0",
    "pyarrow>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.8",
    "mypy>=0.910",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
    "pymdown-extensions>=10.0",
]
duckdb = [
    "duckdb>=0.9.0",
]
# Word-level alignment and formant measurement from source audio. Heavy
# and optional: the corpus itself carries no word timings, so these are
# only needed to re-derive them (see sporc/phonetics.py). Also requires
# the ffmpeg binary on PATH.
phonetics = [
    "torch>=2.1",
    "torchaudio>=2.1",
    "transformers>=4.30",
    "praat-parselmouth>=0.4",
    "soundfile>=0.12",
    "nltk>=3.8",
]

[project.scripts]
sporc = "sporc.cli:main"

[project.urls]
Homepage = "https://github.com/davidjurgens/sporc"
Documentation = "https://sporc.readthedocs.io"
Source = "https://github.com/davidjurgens/sporc"
"Bug Reports" = "https://github.com/davidjurgens/sporc/issues"

[tool.setuptools]
packages = ["sporc"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
